--- a/index.html
+++ b/index.html
@@ -6,19 +6,37 @@
 
   <title>368 Website Starter</title>
  
-  <link rel="stylesheet" href="http://necolas.github.io/normalize.css/3.0.2/normalize.css">  
+  <link rel="stylesheet" href="http://necolas.github.io/normalize.css/3.0.2/normalize.css"> 
   <link rel="stylesheet" href="css/grid.css">
-  <link rel="stylesheet" href="css/styles.css">	
+
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/owl.theme.css"> 
+  <link rel="stylesheet" href="css/styles.css"> 	
 	
 </head>
 <body>
-	
-	<h1>368 Website Starter</h1>
 
-	
+  <!-- 1st ROW -->
+  <div class="grid-container">
 
+	 <!-- 1st COL -->
+   <aside class="grid-2">
+    <h1>Gallery</h1>
+   </aside>
+
+    <!-- 2nd COL -->
+   <div class="grid-10">
+    <article id="owl-example" class="owl-carousel grid-6">
+      <section> <img src="http://lorempixel.com/g/800/400/cats/"></img> </section>
+      <section> <img src="http://lorempixel.com/g/800/400/cats/"></img> </section>
+      <section> <img src="http://lorempixel.com/g/800/400/cats/"></img> </section>
+    </article>
+   </div>
+
+   </div>
 <!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
   	<script type="text/javascript" src="js/scripts.js"></script>
 
 </body>
